--- a/resources/css/home.css
+++ b/resources/css/home.css
@@ -16,6 +16,10 @@
     border-top-right-radius: 100%;
 }
 
+.left-full-radius {
+    border-radius: 100% 0% 0% 100% / 47% 100% 0% 53%;
+}
+
 .rest-section {
     width: 100%;
     height: 20%;
